apps/rollout/overlays/canary/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary-stable
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: canary-stable
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary-canary
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: canary-canary
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary-all
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: canary-stable
  alternateBackends:
    - kind: Service
      name: canary-canary
      weight: 0
